# Monitoria

./: README.md  pyproject.toml
Aula-10-05/: register.py
Operadores/: battle.py
monitoria/Aula-10-05/: README.md  battle.py
monitoria/Aula-17-05/: crud.py  game_db.sql  sample.py
monitoria/sample-connect-database/: conn.py
